--- a/DAL/DAL.csproj
+++ b/DAL/DAL.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="DadosDeConexao.cs" />
     <Compile Include="DALConexao.cs" />
+    <Compile Include="DALUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
