Aula 14 - Criação da camada DAL e BLL para permissao do Usuario

--- a/BLL/BLL.csproj
+++ b/BLL/BLL.csproj
@@ -41,6 +41,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLLPermissaoDoUsuario.cs" />
     <Compile Include="BLLUsuario.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
