--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -78,6 +78,12 @@
     <Compile Include="frmModeloCadastro.Designer.cs">
       <DependentUpon>frmModeloCadastro.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmPermissaoUsuario.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmPermissaoUsuario.Designer.cs">
+      <DependentUpon>frmPermissaoUsuario.cs</DependentUpon>
+    </Compile>
     <Compile Include="FrmPrincipal.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -94,6 +100,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmModeloCadastro.resx">
       <DependentUpon>frmModeloCadastro.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmPermissaoUsuario.resx">
+      <DependentUpon>frmPermissaoUsuario.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="FrmPrincipal.resx">
       <DependentUpon>FrmPrincipal.cs</DependentUpon>
