Aula 16 -  Alteração da lógica do botão Localizar permissão, para buscar as permissões no BD

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -60,6 +60,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BLLPermissaoDeUsuario.cs" />
     <Compile Include="CadastroDeUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
