Aula 22 - Regras de Permissão de Acesso nos menus.

--- a/GUI/GUI.csproj
+++ b/GUI/GUI.csproj
@@ -66,6 +66,7 @@
     <Compile Include="CadastroDeUsuario.Designer.cs">
       <DependentUpon>CadastroDeUsuario.cs</DependentUpon>
     </Compile>
+    <Compile Include="Common\VerificarPermissaoUsuario.cs" />
     <Compile Include="frmLocalizarUsuario.cs">
       <SubType>Form</SubType>
     </Compile>
